[frontend] table scrollbar

--- a/web/admin/src/index.css
+++ b/web/admin/src/index.css
@@ -77,3 +77,19 @@ code {
 .ant-upload.ant-upload-drag {
   background: #161d26;
 }
+
+/* antd table scrollbar */
+.ant-table-body::-webkit-scrollbar {
+  width: 10px;
+  /* height: 1px; */
+}
+.ant-table-body::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3);
+  @apply rounded-br-md;
+}
+.ant-table-body::-webkit-scrollbar-track {
+  -webkit-box-shadow: none;
+  @apply rounded-br-md;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-box-shadow: none;
+}
