feat: modify token payload

--- a/web/admin/src/styles/antd-theme.less
+++ b/web/admin/src/styles/antd-theme.less
@@ -91,6 +91,7 @@
 @font-size-lg: 14px;
 @input-padding-horizontal-lg: 12px;
 @input-bg: @body-background;
+@input-icon-hover-color: @icon-color-hover;
 @form-item-label-height: 20px !important;
 @form-item-label-font-size: 16px;
 @item-active-bg: fade(@primary-color, 25%) !important;
